--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Título de mi web</title>
+		<title>TÃ­tulo de mi web</title>
 		<!--<link rel="stylesheet" href="estilos.css">-->
 		<!--esto es para enlazar una archivo CSS-->
 		<link rel="shortcut icon" 
@@ -16,7 +16,7 @@
 		
 		<b>Las ideas y el conocimiento, el arte,
 		la hospitalidad, los viajes, estas son las
-		cosas que deberían, por su naturaleza, ser
+		cosas que deberÃ­an, por su naturaleza, ser
 		intarnacionales</b>. Pero dejad que los
 		<span>articulos</span> sean hechos en casa, siempre que
 		sea <i>razonable</i> y convenientemente posible;
@@ -27,7 +27,7 @@
 		</p>
 
 		<!--Estas son formas de poner enlaces en
-		la página que diseñes. Hay dos tipos de
+		la pÃ¡gina que diseÃ±es. Hay dos tipos de
 		enlaces: los absolutos (el primero) y los
 		relativos (el segundo)-->
 		<a target="_blank" href="https://www.ineteconomics.org/">Ir a INET</a>		
@@ -44,7 +44,7 @@
 		<p>
 		<blockquote>Las ideas y el conocimiento, el arte,
 		la hospitalidad, los viajes, estas son las
-		cosas que deberían, por su naturaleza, ser
+		cosas que deberÃ­an, por su naturaleza, ser
 		intarnacionales. Pero dejad que los
 		articulos sean hechos en casa, siempre que
 		sea razonable y convenientemente posible;
