--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Título de mi web</title>
+		<title>Siwar Ortiz</title>
 		<!--<link rel="stylesheet" href="estilos.css">-->
 		<!--esto es para enlazar una archivo CSS-->
 		<link rel="shortcut icon" 
