--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 	<body>
 		<!--<script src="archivo.js"></script>-->
 		<!--Esto sirve para enlazar un archivo JavaScript-->
-		<h1>El rincon de los keynesianos</h1>
+		<h1>Siwar Ortiz' website</h1>
+		
+		<p>
+		
+		!Hola¡ actualmente me encuentro desarrollando esta paǵina. Como se puede leer en el título me llamo Siwar Ortiz. En mi tiempo libre me dedico
+		a aprender sobre FreeSoftware y temas relacionados a programación en general. Eventualmente soy estudiante de economía... Anyway, dejaré un link 
+		a la página de la fundación para software libre ("<i>Free Spftware Foundation</i>) y una cita de uno de los economistas más razonables 
+		que ha existido hasta ahora...
+		ps: Nadie debería usar redes sociales (spyware), son una perdida de tiempo... hagan sus propias páginas
+		
+		</p>
 		
 		<p>
 		
@@ -31,15 +41,16 @@
 		enlaces: los absolutos (el primero) y los
 		relativos (el segundo)-->
 		<a target="_blank" href="https://www.ineteconomics.org/">Ir a INET</a>		
-		<a href="sani.png">Riqueza</a>
+		<!--<a href="sani.png">Riqueza</a>-->
+		<a target="_blank" href="https://www.fsf.org/">Free Software Foundation</a>
 
-		<a href="mailto:a73992784@uarm.pe" 
+		<a href="mailto:siwar.ortiz@uarm.pe" 
 		title="Enviar correo a Siwar Ortiz">
 		Enviar Mail</a>
 
 		<hr/>
 
-		<h2>LEL</h2>		
+		<h2>Quote</h2>		
 		
 		<p>
 		<blockquote>Las ideas y el conocimiento, el arte,
@@ -51,7 +62,7 @@
 		y sobre todo, dejad que las finanzas sean
 		antes que nada nacionales.
 		</blockquote>
-		<cite>John Maynar Keynes, 1936</cite>
+		<cite>John Maynard Keynes, 1936</cite>
 		</p>
 	</body>
 
