--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		a aprender sobre FreeSoftware y temas relacionados a programación en general. Eventualmente soy estudiante de economía... Anyway, dejaré un link 
 		a la página de la fundación para software libre ("<i>Free Spftware Foundation</i>) y una cita de uno de los economistas más razonables 
 		que ha existido hasta ahora...
-		
-		ps: Nadie debería usar redes sociales (spyware), son una perdida de tiempo... hagan sus propias páginas
-		
+
 		</p>
+		
+		<p>ps: Nadie debería usar redes sociales (spyware), son una perdida de tiempo... hagan sus propias páginas</p>
 		
 		<p>
 		
@@ -66,6 +66,8 @@
 		<cite>John Maynard Keynes, 1936</cite>
 		</p>
 	
+		<p><b>Comentarios y sugerencias</b></p>
+
 		<form name="contact" method="POST" data-netlify="true">
 		  <p>
 		    <label>Your Name: <input type="text" name="name" /></label>   
@@ -75,7 +77,7 @@
 		  </p>
 		  <p>
 		    <label>Your Role: <select name="role[]" multiple>
-		      <option value="leader">Leader</option>
+		      <option value="random guy">Leader</option>
 		      <option value="follower">Follower</option>
 		    </select></label>
 		  </p>
