Adding sublist to index

--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
 		<ul>
 		    <li>Item I</li>
 		    <li>Item II</li>
-		    <li>Item III</li>
+		    <li>
+			<ul>
+			    <li>Item I</li>
+			    <li>Item II</li>
+			</ul>
+		    </li>
 		    <li>Item IV</li>
 		    <li>Item V</li>
 		</ul>
