Adding ordered list to index

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 		
 		<p>
 		
-		!Hola¡ actualmente me encuentro desarrollando esta paǵina. Como se puede leer en el título me llamo Siwar Ortiz. En mi tiempo libre me dedico
-		a aprender sobre FreeSoftware y temas relacionados a programación en general. Eventualmente soy estudiante de economía... Anyway, dejaré un link 
-		a la página de la fundación para software libre ("<i>Free Spftware Foundation</i>) y una cita de uno de los economistas más razonables 
-		que ha existido hasta ahora...
+		!Hola¡ actualmente me encuentro desarrollando esta paǵina. Como se puede leer en el título me llamo Siwar Ortiz. En mi tiempo libre me dedico a aprender sobre FreeSoftware y temas relacionados a programación en general. Eventualmente soy estudiante de economía... Anyway, dejaré un link a la página de la fundación para software libre ("<i>Free Software Foundation</i>) y una cita de uno de los economistas más razonables que ha existido hasta ahora...
 
 		</p>
 		
@@ -66,6 +63,7 @@
 		<cite>John Maynard Keynes, 1936</cite>
 		</p>
 
+		<!--Unordered list-->
 		<ul>
 		    <li>Item I</li>
 		    <li>Item II</li> 
@@ -76,7 +74,19 @@
 		    <li>Item IV</li>
 		    <li>Item V</li>
 		</ul>
-	
+
+		<!--Ordered list-->
+		<ol>
+                    <li>Item I</li>
+                    <li>Item II</li>
+                        <ol>
+                            <li>Item I</li>
+                            <li>Item II</li>
+                        </ol>
+                    <li>Item IV</li>
+                    <li>Item V</li>
+                </ol>
+
 		<p><b>Comentarios y sugerencias</b></p>
 
 		<form name="contact" method="POST" data-netlify="true">
