Adding first image

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		
 		</p>
 
+		<img src="sani.png"/>
+		<br/>		
+
 		<!--Estas son formas de poner enlaces en
 		la página que diseñes. Hay dos tipos de
 		enlaces: los absolutos (el primero) y los
