Adding first image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		
 		</p>
 
-		<img src="sani.png"/>
+		<img src="sani.png" alt="Imagen random" width="300"/>
 		<br/>		
 
 		<!--Estas son formas de poner enlaces en
