Adding first table

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		
 		<p>
 		
-		!Hola¡ actualmente me encuentro desarrollando esta paǵina. Como se puede leer en el título me llamo Siwar Ortiz. En mi tiempo libre me dedico a aprender sobre FreeSoftware y temas relacionados a programación en general. Eventualmente soy estudiante de economía... Anyway, dejaré un link a la página de la fundación para software libre ("<i>Free Software Foundation</i>) y una cita de uno de los economistas más razonables que ha existido hasta ahora...
+		!Hola¡ actualmente me encuentro desarrollando esta paǵina. Como se puede leer en el título me llamo Siwar Ortiz. En mi tiempo libre me dedico a aprender sobre FreeSoftware y temas relacionados a programación en general. Eventualmente soy estudiante de economía... Anyway, dejaré un link a la página de la fundación para software libre ("<i>Free Software Foundation</i>") y una cita de uno de los economistas más razonables que ha existido hasta ahora...
 
 		</p>
 		
@@ -89,6 +89,24 @@
                     <li>Item IV</li>
                     <li>Item V</li>
                 </ol>
+
+		<table>
+		   <tr>
+			<td>Elemento 11</td>
+                        <td>Elemento 12</td>
+                        <td>Elemento 13</td>
+		   </tr>
+		   <tr>
+                        <td>Elemento 21</td>
+                        <td>Elemento 22</td>
+                        <td>Elemento 23</td>
+                   </tr>
+                   <tr>
+                        <td>Elemento 31</td>
+                        <td>Elemento 32</td>
+                        <td>Elemento 33</td>
+                   </tr>
+		</table>
 
 		<p><b>Comentarios y sugerencias</b></p>
 
