Adding css file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
+
 	<head>
 		<title>Siwar Ortiz</title>
-		<!--<link rel="stylesheet" href="estilos.css">-->
+		<meta charset="utf-8"/>
+		<link rel="stylesheet" type='text/css' href="style.css">
 		<!--esto es para enlazar una archivo CSS-->
 		<link rel="shortcut icon" 
 		type="image/x-icon" href="sani.ico">
