--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 			<nav>
 	                   <ul>
                     		<li><a href="#">Inicio</a></li>
-                   		<li>Categoría I</li>
-                    		<li>Categoría II</li>
-                    		<li>Categoría III</li>
+                   		<li><a href="#">Linux</a></li>
+                    		<li><a href="#">Personal</a></li>
+                    		<li><a href="#">Academia</a></li>
                 	   </ul>
 			</nav>
 		</header>
