luke's menubar added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header>
 			<h1>Siwar Ortiz' website</h1>
 			<nav>
-	                   <ul>
+	                   <ul class="menubar">
                     		<li><a href="#">Inicio</a></li>
                    		<li><a href="#">Linux</a></li>
                     		<li><a href="#">Personal</a></li>
