--- a/academia.html
+++ b/academia.html
@@ -25,5 +25,12 @@
 
                 <section class="wrapper">
 			<p>Esta es una lista de algunos de los artículos y ensayos que he
-			redactado para algunos cursos de economía ("disciplina" que estudio)</p>
+			redactado para algunos cursos de economía ("disciplina" que estudio).</p>
+			
+			<h2>Artículos, Ensayos, etc...</h2>
+			<ul>
+			   <li><a target="_blank" href="paper_econometria.pdf">Hipótesis de la Curva Ambiental de Kuznets en
+				el Perú</a></li>
+			   <li><a target="_blank" href="articulo_inga.pdf">Urge la autodeterminación ambiental en el Perú</a></li>
+			</ul>
 		</section>
