--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		<!--<script src="archivo.js"></script>-->
 		<!--Esto sirve para enlazar un archivo JavaScript-->
 		
-		<section class="wrapper">
-		   <section class="main>"
+		
+		<section class="main>"
 		      <article>
 			<p>
 		
@@ -44,18 +44,17 @@
 			<p>ps: Nadie debería usar redes sociales (spyware), son una perdida de tiempo... 
 			hagan sus propias páginas</p>
 		
-			<p>
-		
-			<b>Las ideas y el conocimiento, el arte,
+			<h2>Quote</h2>
+			<p>		
+			<blockquote><b>Las ideas y el conocimiento, el arte,
 			la hospitalidad, los viajes, estas son las
 			cosas que deberían, por su naturaleza, ser
 			intarnacionales</b>. Pero dejad que los
 			<span>articulos</span> sean hechos en casa, siempre que
 			sea <i>razonable</i> y convenientemente posible;
 			y sobre todo, dejad <strong>que las finanzas sean
-			antes que nada nacionales</strong>.<br/>John Maynard 
-			Keynes, 1936
-		
+			antes que nada nacionales</strong>.</blockquote>
+			<cite>John Maynard Keynes, 1936</cite>
 			</p>
 
 			<!--Estas son formas de poner enlaces en
@@ -96,28 +95,8 @@
 			    <button type="submit">Send</button>
 			  </p>
 			</form>
-		   </section>
-
-		   <aside>
-                	<h2>Quote</h2>
-
-	                <p>
-	                <blockquote>Las ideas y el conocimiento, el arte,
-	                la hospitalidad, los viajes, estas son las
-	                cosas que deberían, por su naturaleza, ser
-	                intarnacionales. Pero dejad que los
-	                articulos sean hechos en casa, siempre que
-	                sea razonable y convenientemente posible;
-	                y sobre todo, dejad que las finanzas sean
-	                antes que nada nacionales.
-	                </blockquote>
-	                <cite>John Maynard Keynes, 1936</cite>
-	                </p>
-
-		   </aside>
-
 		</section>
-
+		
 		<footer>
 		    <p>Siwar Ortiz - 2020</p>
 		</footer>
