--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!--Esto sirve para enlazar un archivo JavaScript-->
 		
 		
-		<section class="main>"
+		<section class="main">
 		      <article>
 			<p>
 		
