--- a/academia.html
+++ b/academia.html
@@ -23,7 +23,7 @@
                         </nav>
                 </header>
 
-                <section class="wrapper">
+                <section class="main">
 			<p>Esta es una lista de algunos de los artículos y ensayos que he
 			redactado para algunos cursos de economía ("disciplina" que estudio).</p>
 			
