changing referenced links

--- a/academia.html
+++ b/academia.html
@@ -29,8 +29,8 @@
 			
 			<h2>Artículos, Ensayos, etc...</h2>
 			<ul>
-			   <li><a target="_blank" href="paper_econometria.pdf">Hipótesis de la Curva Ambiental de Kuznets en
+			   <li><a target="_blank" href="docs/paper_econometria.pdf">Hipótesis de la Curva Ambiental de Kuznets en
 				el Perú</a></li>
-			   <li><a target="_blank" href="articulo_inga.pdf">Urge la autodeterminación ambiental en el Perú</a></li>
+			   <li><a target="_blank" href="docs/articulo_inga.pdf">Urge la autodeterminación ambiental en el Perú</a></li>
 			</ul>
 		</section>
