--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type='text/css' href="style.css">
 		<!--esto es para enlazar una archivo CSS-->
 		<link rel="shortcut icon" 
-		type="image/x-icon" href="sani.ico">
+		type="image/x-icon" href="images/sani.ico">
 	</head>
 
 	<body>
@@ -81,12 +81,6 @@
 			  </p>
 			  <p>
 			    <label>Your Email: <input type="email" name="email" /></label>
-			  </p>
-			  <p>
-			    <label>Your Role: <select name="role[]" multiple>
-			      <option value="random guy">Leader</option>
-			      <option value="follower">Follower</option>
-			    </select></label>
 			  </p>
 			  <p>
 			    <label>Message: <textarea name="message"></textarea></label>
