deleting particular files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			Como se puede leer en el título me llamo Siwar Ortiz. En mi 
 			tiempo libre me dedico a aprender sobre FreeSoftware y temas 
 			relacionados a programación en general. Eventualmente soy 
-			estudiante de economía... Anyway, dejaré un link a la página
+			estudiante de economía... Dejaré un link a la página
 			de la fundación para software libre ("<i>Free Software Foundation</i>")
 			y una cita de uno de los economistas más razonables que ha existido hasta ahora...
 
