adding my profile image and ico

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type='text/css' href="style.css">
 		<!--esto es para enlazar una archivo CSS-->
 		<link rel="shortcut icon" 
-		type="image/x-icon" href="images/sani.ico">
+		type="image/x-icon" href="images/me.ico">
 	</head>
 
 	<body>
@@ -28,6 +28,10 @@
 		
 		
 		<section class="main">
+
+		      <a href="docs/CV_Ortiz_Siwar.pdf"><img style="outline: darkblue solid 2px; float: right; 
+		      margin: 10px;" src="images/me.jpg" alt="Siwar Ortiz" title="Siwar Ortiz"></a>
+
 		      <article>
 			<p>
 		
