--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<section class="main">
 
 		      <a href="docs/CV_Ortiz_Siwar.pdf"><img style="outline: darkblue solid 2px; float: right; 
-		      margin: 10px;" src="images/me.jpg" alt="Siwar Ortiz" title="Siwar Ortiz"></a>
+		      margin: 10px; height: 250px;" src="images/me.jpg" alt="Siwar Ortiz" title="Siwar Ortiz"></a>
 
 		      <article>
 			<p>
