--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 			<h1>Siwar Ortiz' website</h1>
 			<nav>
 	                   <ul class="menubar">
-                    		<li><a href="index.html">Inicio</a></li>
+                    		<li><a href="index.html" alt="inicio">Inicio</a></li>
                    		<li><a href="#">Linux</a></li>
                     		<li><a href="#">Personal</a></li>
-                    		<li><a href="academia.html">Academia</a></li>
+                    		<li><a href="academia.html" alt="academia">Academia</a></li>
                 	   </ul>
 			</nav>
 		</header>
