--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 	                   <ul class="menubar">
                     		<li><a href="index.html" alt="inicio">Inicio</a></li>
                    		<li><a href="#">Linux</a></li>
-                    		<li><a href="#">Personal</a></li>
+                    		<li><a href="#">Personal</a>
+				    <ul>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">CV</a></li>
+				    </ul>
+				</li>
                     		<li><a href="academia.html" alt="academia">Academia</a></li>
                 	   </ul>
 			</nav>
