--- a/academia.html
+++ b/academia.html
@@ -7,7 +7,7 @@
                 <link rel="stylesheet" type='text/css' href="style.css">
                 <!--esto es para enlazar una archivo CSS-->
                 <link rel="shortcut icon"
-                type="image/x-icon" href="sani.ico">
+                type="image/x-icon" href="images/me.ico">
         </head>
 
         <body>
@@ -17,8 +17,13 @@
                            <ul class="menubar">
                                 <li><a href="index.html">Inicio</a></li>
                                 <li><a href="#">Linux</a></li>
-                                <li><a href="#">Personal</a></li>
-                                <li><a href="academia.html">Academia</a></li>
+                                <li><a href="#">Personal</a>
+                                   <ul>
+                                        <li><a href="#">Blog</a></li>
+                                        <li><a href="#">CV</a></li>
+                                   </ul>
+                                </li>
+                                <li><a href="academia">Academia</a></li>
                            </ul>
                         </nav>
                 </header>
