--- a/academia.html
+++ b/academia.html
@@ -15,7 +15,7 @@
                         <h1>Siwar Ortiz' academia</h1>
                         <nav>
                            <ul class="menubar">
-                                <li><a href="index.html">Inicio</a></li>
+                                <li><a href="index">Inicio</a></li>
                                 <li><a href="#">Linux</a></li>
                                 <li><a href="#">Personal</a>
                                    <ul>
