--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h1>Siwar Ortiz' website</h1>
 			<nav>
 	                   <ul class="menubar">
-                    		<li><a href="index.html" alt="inicio">Inicio</a></li>
+                    		<li><a href="index" alt="inicio">Inicio</a></li>
                    		<li><a href="#">Linux</a></li>
                     		<li><a href="#">Personal</a>
 				    <ul>
@@ -23,7 +23,7 @@
 					<li><a href="#">CV</a></li>
 				    </ul>
 				</li>
-                    		<li><a href="academia.html" alt="academia">Academia</a></li>
+                    		<li><a href="academia" alt="academia">Academia</a></li>
                 	   </ul>
 			</nav>
 		</header>
