blog.html added

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 
         <body>
                 <header>
-                        <h1>Siwar Ortiz' academia</h1>
+                        <h1>Siwar Ortiz' blog</h1>
                         <nav>
                            <ul class="menubar">
                                 <li><a href="index">Inicio</a></li>
@@ -29,14 +29,12 @@
                 </header>
 
                 <section class="main">
-			<p>Esta es una lista de algunos de los artículos y ensayos que he
-			redactado para algunos cursos de economía ("disciplina" que estudio).</p>
-			
-			<h2>Artículos, Ensayos, etc...</h2>
-			<ul>
-			   <li><a target="_blank" href="docs/paper_econometria.pdf">Hipótesis de la Curva Ambiental de Kuznets en
-				el Perú</a></li>
-			   <li><a target="_blank" href="docs/articulo_inga.pdf">Urge la autodeterminación ambiental en el Perú</a></li>
-			</ul>
-		</section>
-</html>
+                        <p>Aquí subiré de forma intermitente algunas publicaciones sobre tópicos variados.
+			El objetivo es aplicar el método de estudio de Richard Feynman.</p>
+
+                        <h2>Septiembre 2020</h2>
+                        <ul>
+                           <li>25 Sep 2020 &ndash; <a href="#"</a>asdasdasd</li>
+                        </ul>
+                </section>
+</html>                                                                                            
