--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                    		<li><a href="#">Linux</a></li>
                     		<li><a href="#">Personal</a>
 				    <ul>
-					<li><a href="#">Blog</a></li>
+					<li><a href="blog">Blog</a></li>
 					<li><a href="#">CV</a></li>
 				    </ul>
 				</li>
