blog directory added

--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
 
                         <h2>Septiembre 2020</h2>
                         <ul>
-                           <li>25 Sep 2020 &ndash; <a href="#"</a>asdasdasd</li>
+                           <li>25 Sep 2020 &ndash; <a href="blog/post-de-prueba"</a>Prueba</li>
                         </ul>
                 </section>
 </html>                                                                                            
