--- a/index.html
+++ b/index.html
@@ -86,21 +86,22 @@
 
 			<form name="contact" method="POST" data-netlify="true">
 			  <p>
-			    <label>Your Name: <input type="text" name="name" /></label>   
+			    <label>Nombre: <input type="text" name="name" /></label>   
 			  </p>
 			  <p>
-			    <label>Your Email: <input type="email" name="email" /></label>
+			    <label>E-mail: <input type="email" name="email" /></label>
 			  </p>
 			  <p>
-			    <label>Message: <textarea name="message"></textarea></label>
+			    <label>Mensaje: <textarea name="message"></textarea></label>
 			  </p>
 			  <p>
 			    <button type="submit">Send</button>
 			  </p>
 			</form>
+			
+			<hr/>			
+
 		</section>
-		
-		<hr/>
 		
 		<footer>
 		    <p>Siwar Ortiz - 2020</p>
