index html changed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<title>Siwar Ortiz</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type='text/css' href="style.css">
-		<!--esto es para enlazar una archivo CSS-->
 		<link rel="shortcut icon" 
 		type="image/x-icon" href="images/me.ico">
 	</head>
@@ -26,11 +25,7 @@
                     		<li><a href="academia" alt="academia">Academia</a></li>
                 	   </ul>
 			</nav>
-		</header>
-		
-		<!--<script src="archivo.js"></script>-->
-		<!--Esto sirve para enlazar un archivo JavaScript-->
-		
+		</header>		
 		
 		<section class="main">
 
@@ -40,10 +35,8 @@
 		      <article>
 			<p>
 		
-			!Hola¡ actualmente me encuentro desarrollando esta paǵina. 
-			Como se puede leer en el título me llamo Siwar Ortiz. En mi 
-			tiempo libre me dedico a aprender sobre FreeSoftware y temas 
-			relacionados a programación en general. Eventualmente soy 
+			Esta es una página personal cuyo propósito es servir de repositorio de artículos,
+			ensayos, notas sobre tópicos relevantes, etc. Eventualmente soy 
 			estudiante de economía... Dejaré un link a la página
 			de la fundación para software libre ("<i>Free Software Foundation</i>")
 			y una cita de uno de los economistas más razonables que ha existido hasta ahora...
