--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     		<li><a href="#">Personal</a>
 				    <ul>
 					<li><a href="blog">Blog</a></li>
-					<li><a href="#">CV</a></li>
+					<li><a href="docs/CV_Ortiz_Siwar.pdf">Rèsumèe</a></li>
 				    </ul>
 				</li>
                     		<li><a href="academia" alt="academia">Academia</a></li>
@@ -59,12 +59,7 @@
 			<cite>John Maynard Keynes, 1936</cite>
 			</p>
 
-			<!--Estas son formas de poner enlaces en
-			la página que diseñes. Hay dos tipos de
-			enlaces: los absolutos (el primero) y los
-			relativos (el segundo)-->
 			<a target="_blank" href="https://www.ineteconomics.org/">Ir a INET</a>		
-			<!--<a href="sani.png">Riqueza</a>-->
 			<a target="_blank" href="https://www.fsf.org/">Free Software Foundation</a>
 
 			<a href="mailto:siwar.ortiz@uarm.pe" 
