--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     		<li><a href="#">Personal</a>
 				    <ul>
 					<li><a href="blog">Blog</a></li>
-					<li><a href="docs/CV_Ortiz_Siwar.pdf">Rèsumèe</a></li>
+					<li><a href="docs/CV_Ortiz_Siwar.pdf">Résumée</a></li>
 				    </ul>
 				</li>
                     		<li><a href="academia" alt="academia">Academia</a></li>
