--- a/academia.html
+++ b/academia.html
@@ -5,7 +5,6 @@
                 <title>Siwar Ortiz</title>
                 <meta charset="utf-8"/>
                 <link rel="stylesheet" type='text/css' href="style.css">
-                <!--esto es para enlazar una archivo CSS-->
                 <link rel="shortcut icon"
                 type="image/x-icon" href="images/me.ico">
         </head>
@@ -20,7 +19,7 @@
                                 <li><a href="#">Personal</a>
                                    <ul>
                                         <li><a href="blog">Blog</a></li>
-                                        <li><a href="#">CV</a></li>
+                                        <li><a href="docs/CV_Ortiz_Siwar.pdf">Résumée</a></li>
                                    </ul>
                                 </li>
                                 <li><a href="academia">Academia</a></li>
