--- a/blog.html
+++ b/blog.html
@@ -33,13 +33,13 @@
 
 			<h2>Octubre 2020</h2>
                         <ul>
-                           <li>11 Oct 2020 &ndash; <a href="blog/historia-pensamiento-economico"</a>
-			   Historia del pensamiento económico</li>
+                           <li>11 Oct 2020 &ndash; <a href="blog/historia-pensamiento-economico">
+			   Historia del pensamiento económico</a></li>
                         </ul>
 
                         <h2>Septiembre 2020</h2>
                         <ul>
-                           <li>25 Sep 2020 &ndash; <a href="blog/post-de-prueba"</a>Prueba</li>
+                           <li>25 Sep 2020 &ndash; <a href="blog/post-de-prueba">Prueba</a></li>
                         </ul>
                 </section>
 </html>                                                                                            
