--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
         <head>
-                <title>Siwar Ortiz</title>
+                <title>Siwar' blog index</title>
                 <meta charset="utf-8"/>
                 <link rel="stylesheet" type='text/css' href="style.css">
                 <link rel="shortcut icon"
@@ -11,7 +11,7 @@
 
         <body>
                 <header>
-                        <h1>Siwar Ortiz' blog</h1>
+                        <h1>Siwar' blog index</h1>
                         <nav>
                            <ul class="menubar">
                                 <li><a href="index">Inicio</a></li>
