--- a/academia.html
+++ b/academia.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
         <head>
-                <title>Siwar Ortiz</title>
+                <title>Siwar' academia</title>
                 <meta charset="utf-8"/>
                 <link rel="stylesheet" type='text/css' href="style.css">
                 <link rel="shortcut icon"
@@ -11,7 +11,7 @@
 
         <body>
                 <header>
-                        <h1>Siwar Ortiz' academia</h1>
+                        <h1>Siwar' academia</h1>
                         <nav>
                            <ul class="menubar">
                                 <li><a href="index">Inicio</a></li>
