--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		
 			Esta es una página personal cuyo propósito es servir de repositorio de artículos,
 			ensayos, notas sobre tópicos relevantes, etc. Eventualmente soy 
-			estudiante de economía... Dejaré un link a la página
+			estudiante de economía... Dejaré un <i>link</i> a la página
 			de la fundación para software libre ("<i>Free Software Foundation</i>")
 			y una cita de uno de los economistas más razonables que ha existido hasta ahora...
 
@@ -51,7 +51,7 @@
 			<blockquote><b>Las ideas y el conocimiento, el arte,
 			la hospitalidad, los viajes, estas son las
 			cosas que deberían, por su naturaleza, ser
-			intarnacionales</b>. Pero dejad que los
+			internacionales</b>. Pero dejad que los
 			<span>articulos</span> sean hechos en casa, siempre que
 			sea <i>razonable</i> y convenientemente posible;
 			y sobre todo, dejad <strong>que las finanzas sean
