--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			la hospitalidad, los viajes, estas son las
 			cosas que deberían, por su naturaleza, ser
 			internacionales</b>. Pero dejad que los
-			<span>articulos</span> sean hechos en casa, siempre que
+			<span>artículos</span> sean hechos en casa, siempre que
 			sea <i>razonable</i> y convenientemente posible;
 			y sobre todo, dejad <strong>que las finanzas sean
 			antes que nada nacionales</strong>.</blockquote>
