--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
                 </header>
 
                 <section class="main">
-                        <p>Aquí subiré de forma intermitente algunas publicaciones sobre tópicos variados.
+                        <p>Aquí subiré, de forma intermitente, algunas publicaciones sobre tópicos variados.
 			El objetivo es aplicar el método de estudio de Richard Feynman.</p>
 
 			<h2>Octubre 2020</h2>
