--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 		
 			Esta es una página personal cuyo propósito es servir de repositorio de artículos,
 			ensayos, notas sobre tópicos relevantes, etc. Eventualmente soy 
-			estudiante de economía... Dejaré un <i>link</i> a la página
+			estudiante de economía y en mi tiempo libre me dedico a aprender sobre
+			<i>data science</i> y desarrollo de software. Tambíen hay una versión en 
+			<a href= "#">inglés</a> de este sitio. Dejaré un <i>link</i> a la página
 			de la fundación para software libre ("<i>Free Software Foundation</i>")
 			y una cita de uno de los economistas más razonables que ha existido hasta ahora...
 
