--- a/en/home.html
+++ b/en/home.html
@@ -4,9 +4,9 @@
 	<head>
 		<title>Siwar Ortiz</title>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type='text/css' href=".. /style.css">
+		<link rel="stylesheet" type='text/css' href="../style.css">
 		<link rel="shortcut icon" 
-		type="image/x-icon" href="images/me.ico">
+		type="image/x-icon" href="../images/me.ico">
 	</head>
 
 	<body>
@@ -19,7 +19,7 @@
                     		<li><a href="#">Personal</a>
 				    <ul>
 					<li><a href="blog">Blog</a></li>
-					<li><a href="docs/CV_Ortiz_Siwar.pdf">Résumée</a></li>
+					<li><a href="../docs/CV_Ortiz_Siwar.pdf">Résumée</a></li>
 				    </ul>
 				</li>
                     		<li><a href="academia" alt="academia">Academia</a></li>
@@ -29,8 +29,8 @@
 		
 		<section class="main">
 
-		      <a href=".. /docs/CV_Ortiz_Siwar.pdf"><img style="outline: darkblue solid 2px; float: right; 
-		      margin: 10px; height: 250px;" src=".. /images/me.jpg" alt="Siwar Ortiz" title="Siwar Ortiz"></a>
+		      <a href="../docs/CV_Ortiz_Siwar.pdf"><img style="outline: darkblue solid 2px; float: right; 
+		      margin: 10px; height: 250px;" src="../images/me.jpg" alt="Siwar Ortiz" title="Siwar Ortiz"></a>
 
 		      <article>
 			<p>
@@ -38,7 +38,7 @@
 			This is a personal website, which purpose is to serve as a repository of articles,
 			essays, notes on topics that I consider relevant, etc. Eventually, I'm an undergraduate
 			economics student, and I spend most of my free time learning about data science and 
-			software development. There's also a <a href= "#">spanish</a> version of this site.
+			software development. There's also a <a href= "../index">spanish</a> version of this site.
 			I will leave a link to the Free Software Foundation site and a quote of 
 			one of the most reasonable economists that had existed until now...
 
