--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			ensayos, notas sobre tópicos relevantes, etc. Eventualmente soy 
 			estudiante de economía y en mi tiempo libre me dedico a aprender sobre
 			<i>data science</i> y desarrollo de software. Tambíen hay una versión en 
-			<a href= "en/home.html">inglés</a> de este sitio. Dejaré un <i>link</i> a la página
+			<a href= "en/home">inglés</a> de este sitio. Dejaré un <i>link</i> a la página
 			de la fundación para software libre ("<i>Free Software Foundation</i>")
 			y una cita de uno de los economistas más razonables que ha existido hasta ahora...
 
