--- a/en/blog.html
+++ b/en/blog.html
@@ -28,16 +28,16 @@
                 </header>
 
                 <section class="main">
-                        <p>Aquí subiré, de forma intermitente, algunas publicaciones sobre tópicos variados.
-			El objetivo es aplicar el método de estudio de Richard Feynman.</p>
+                        <p>Here I will upload, in an irregular basis, some notes on various topics.
+			The objective is to apply the study method of Richard Feynman.</p>
 
-			<h2>Diciembre 2020</h2>
+			<h2>December 2020</h2>
 			<ul>
-				<li>6 Dic 2020 &ndash; <a href="../blog/es/smith-mano-invisible">
+				<li>6 Dec 2020 &ndash; <a href="../blog/es/smith-mano-invisible">
 				The invisible hand of Adam Smith</a></li>
 			</ul>
 
-			<h2>Octubre 2020</h2>
+			<h2>October 2020</h2>
                         <ul>
                            <li>11 Oct 2020 &ndash; <a href="../blog/es/historia-pensamiento-economico">
 			   History of economic thinking</a></li>
