--- a/en/blog.html
+++ b/en/blog.html
@@ -14,7 +14,7 @@
                         <h1>Siwar' blog index</h1>
                         <nav>
                            <ul class="menubar">
-                                <li><a href="en/home">Home</a></li>
+                                <li><a href="home">Home</a></li>
                                 <li><a href="#">Linux</a></li>
                                 <li><a href="#">Personal</a>
                                    <ul>
