--- a/en/home.html
+++ b/en/home.html
@@ -14,7 +14,7 @@
 			<h1>Siwar Ortiz' website</h1>
 			<nav>
 	                   <ul class="menubar">
-                    		<li><a href="en/home" alt="inicio">Home</a></li>
+                    		<li><a href="home" alt="home">Home</a></li>
                    		<li><a href="#">Linux</a></li>
                     		<li><a href="#">Personal</a>
 				    <ul>
