--- a/en/home.html
+++ b/en/home.html
@@ -29,7 +29,7 @@
 		
 		<section class="main">
 
-		      <a href="../docs/CV_Ortiz_Siwar.pdf"><img style="outline: darkblue solid 2px; float: right; 
+		      <a href="../docs/en/CV_Ortiz_Siwar_en.pdf"><img style="outline: darkblue solid 2px; float: right; 
 		      margin: 10px; height: 250px;" src="../images/me.jpg" alt="Siwar Ortiz" title="Siwar Ortiz"></a>
 
 		      <article>
