Minor changes made

--- a/en/home.html
+++ b/en/home.html
@@ -59,7 +59,7 @@
 			<cite>John Maynard Keynes, 1936</cite>
 			</p>
 
-			<a target="_blank" href="https://www.ineteconomics.org/">Ir a INET</a>		
+			<a target="_blank" href="https://www.ineteconomics.org/">Go to INET</a>		
 			<a target="_blank" href="https://www.fsf.org/">Free Software Foundation</a>
 
 			<a href="mailto:siwar.ortiz@uarm.pe" 
