--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 			<i>data science</i> y desarrollo de software. Tambíen hay una versión en 
 			<a href= "en/home">inglés</a> de este sitio. Dejaré un <i>link</i> a la página
 			de la fundación para software libre ("<i>Free Software Foundation</i>")
-			y una cita de uno de los economistas más razonables que ha existido hasta ahora...
+			y una cita a uno de los economistas más razonables que ha existido hasta ahora...
 
 			</p>
 		
 			<p>ps: Nadie debería usar redes sociales (spyware), son una perdida de tiempo... 
 			hagan sus propias páginas</p>
 		
-			<h2>Quote</h2>
+			<h2>Cita</h2>
 			<p>		
 			<blockquote><b>Las ideas y el conocimiento, el arte,
 			la hospitalidad, los viajes, estas son las
