minor fixes to home pages

--- a/en/home.html
+++ b/en/home.html
@@ -44,8 +44,10 @@
 
 			</p>
 		
-			<p>ps: Nobody should use "social" media (spyware). It is all a waste of time... 
+			<p>ps1: Nobody should use "social" media (spyware). It is all a waste of time... 
 			do your own websites</p>
+
+			<p>ps2: This page was completely designed and written by me.</p>
 		
 			<h2>Quote</h2>
 			<p>		
@@ -92,7 +94,7 @@
 		</section>
 		
 		<footer>
-		    <p>Siwar Ortiz - 2020</p>
+		    <p>Siwar Ortiz - 2021</p>
 		</footer>
 
 	</body>
