--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
 
 			</p>
 		
-			<p>ps: Nadie debería usar redes sociales (spyware), son una perdida de tiempo... 
+			<p>ps1: Nadie debería usar redes sociales (spyware), son una perdida de tiempo... 
 			hagan sus propias páginas</p>
+
+			<p>ps2: Esta página fue diseñada y escrita completamente por mí.</p>
 		
 			<h2>Cita</h2>
 			<p>		
@@ -94,7 +96,7 @@
 		</section>
 		
 		<footer>
-		    <p>Siwar Ortiz - 2020</p>
+		    <p>Siwar Ortiz - 2021</p>
 		</footer>
 
 	</body>
