english CV effectively added

--- a/en/home.html
+++ b/en/home.html
@@ -19,7 +19,7 @@
                     		<li><a href="#">Personal</a>
 				    <ul>
 					<li><a href="blog">Blog</a></li>
-					<li><a href="../docs/CV_Ortiz_Siwar.pdf">Résumée</a></li>
+					<li><a href="../docs/en/CV_Ortiz_Siwar_en.pdf">Résumée</a></li>
 				    </ul>
 				</li>
                     		<li><a href="academia" alt="academia">Academia</a></li>
