--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 			<nav>
 	                   <ul class="menubar">
                     		<li><a href="index" alt="inicio">Inicio</a></li>
-                   		<li><a href="#">Linux</a></li>
+                   		<li><a href="#">Linux</a>
 				    <ul>
 					<li><a href="linux/software">Software I use</a></li>
 				    </ul>
+				</li>
                     		<li><a href="#">Personal</a>
 				    <ul>
 					<li><a href="blog">Blog</a></li>
