Software I use ling changes to spanish

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     		<li><a href="index" alt="inicio">Inicio</a></li>
                    		<li><a href="#">Linux</a>
 				    <ul>
-					<li><a href="linux/software">Software I use</a></li>
+					<li><a href="linux/software">Software que uso</a></li>
 				    </ul>
 				</li>
                     		<li><a href="#">Personal</a>
