index pages changed

--- a/en/home.html
+++ b/en/home.html
@@ -44,10 +44,8 @@
 
 			</p>
 		
-			<p>ps1: Nobody should use "social" media (spyware). It is all a waste of time... 
+			<p>ps: Nobody should use "social" media (spyware). It is all a waste of time... 
 			do your own websites</p>
-
-			<p>ps2: This page was completely designed and written by me.</p>
 		
 			<h2>Quote</h2>
 			<p>		
