--- a/index.html
+++ b/index.html
@@ -49,11 +49,9 @@
 
 			</p>
 		
-			<p>ps1: Nadie debería usar redes sociales (spyware), son una perdida de tiempo... 
+			<p>ps: Nadie debería usar redes sociales (spyware), son una perdida de tiempo... 
 			hagan sus propias páginas</p>
-
-			<p>ps2: Esta página fue diseñada y escrita completamente por mí.</p>
-		
+	
 			<h2>Cita</h2>
 			<p>		
 			<blockquote><b>Las ideas y el conocimiento, el arte,
